# bazel_shared_library

./: BUILD.bazel  MODULE.bazel  defs.bzl
src/: bar.cpp  bar.hpp  baz.cpp  foo.cpp  foo.hpp
